# Dictationator-Fastest-whisper-Transcriber

./: .gitignore  CLAUDE.md  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt  sample copy.env  setup.py  start.bat  start_gui.bat  start_gui.sh  test_gemini_simple.py  test_status_indicator.py  test_venv.py
.claude/: settings.local.json
docs/: API.md  DEVELOPMENT.md  MODEL_NORMALIZATION.md  PLANNING.md  TASK.md
example_docs/: faster_whisper.md  gemini.md
src/dictationer/: __init__.py  audio.py  config.py  gui.py  keyboard.py  main.py  paster.py  processor.py  shortcut_recorder.py  status_indicator.py  status_window.py
src/dictationer/reformatter/: __init__.py  controller.py  gemini.py  status_window.py
